subprojects {
    apply plugin: 'java-library'
    java.toolchain.languageVersion = JavaLanguageVersion.of(21)

    repositories {
        mavenCentral()
        maven { url = 'https://maven.moddingx.org' }
    }
}
